Move buildspecs to S3 bucket (#113)
* rm buildspecs
* style improvements & code debt